--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:cemu_launcher"
-             StartupUri="MainWindow.xaml"
+             StartupUri="UI/MainWindow.xaml"
              ThemeMode="System">
     <Application.Resources>
     </Application.Resources>
