--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="cemu_launcher.MainWindow"
+﻿<Window x:Class="cemu_launcher.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:cemu_launcher"
+        xmlns:local="clr-namespace:cemu_launcher.UI"
         mc:Ignorable="d"
         Title="cemu-launcher" Height="200" Width="600"
         WindowStartupLocation="CenterScreen"
